# ML-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-build-push.yml  python-lint-test.yml  security-scan.yml  terraform-plan.yml  terraform-validate.yml
configs/: pipeline.yaml
configs/training/: deepspeed-zero3.json  lora-7b.yaml  qlora-7b.yaml
docker/litellm/: Dockerfile  config.yaml
docker/pipeline-components/: Dockerfile  requirements.txt
docker/serving/: Dockerfile
docker/training/: Dockerfile
docs/architecture/: overview.md
docs/guides/: getting-started.md
docs/runbooks/inference/: model-serving.md
docs/runbooks/infrastructure/: cluster-operations.md
docs/runbooks/training/: training-jobs.md
kubernetes/: README.md
kubernetes/argocd/apps/: app-of-apps.yaml  mlops-apps.yaml
kubernetes/argocd/install/: values.yaml
kubernetes/base/: cluster-issuers.yaml  cluster-secret-stores.yaml  namespaces.yaml
kubernetes/base/namespaces/: data-namespace.yaml  kubeflow-namespace.yaml  milvus-namespace.yaml  mlflow-namespace.yaml  ray-namespace.yaml  training-namespace.yaml
kubernetes/base/serving/: inference-service.yaml  vllm-runtime.yaml
kubernetes/helm-values/dev/: cert-manager.yaml  external-secrets.yaml  istio.yaml  kserve.yaml  kube-prometheus-stack.yaml  kubeflow-pipelines.yaml  kuberay-operator.yaml  litellm.yaml  loki.yaml  milvus.yaml  mlflow.yaml  ray-cluster.yaml  redis.yaml  training-operator.yaml  volcano.yaml
pipelines/data/: __init__.py  components.py  ingestion_pipeline.py
pipelines/evaluation/: __init__.py  components.py  deepeval_pipeline.py  ragas_eval.py
pipelines/serving/: __init__.py  components.py  deploy_pipeline.py
pipelines/training/: __init__.py  components.py  lora_finetuning.py
scripts/deploy/: bootstrap-cluster.sh  deploy-argocd.sh
scripts/setup/: install-dependencies.sh  setup-local-cluster.sh
src/: __init__.py
src/common/: __init__.py  config.py  logging.py  metrics.py
src/data/: __init__.py
src/data/embedding/: __init__.py  batch.py  models.py  ray_service.py
src/data/ingestion/: __init__.py  chunkers.py  loaders.py  parsers.py
src/data/pipeline/: __init__.py  cli.py  pipeline.py
src/data/storage/: __init__.py  milvus.py  s3.py
src/evaluation/: __init__.py
src/evaluation/metrics/: __init__.py  deepeval_metrics.py  ragas_metrics.py
src/evaluation/runners/: __init__.py  eval_runner.py
src/serving/: __init__.py  config.py  model_loader.py  vllm_launcher.py
src/training/: __init__.py
src/training/callbacks/: __init__.py  checkpoint_callback.py  mlflow_callback.py
src/training/configs/: __init__.py  deepspeed_config.py  lora_config.py
src/training/optimization/: __init__.py  ray_tune.py
src/training/trainers/: __init__.py  distributed_trainer.py  lora_trainer.py
terraform/environments/dev/: main.tf  outputs.tf  terraform.tfvars  variables.tf
tests/data/: conftest.py  test_components.py  test_pipeline.py
tests/e2e/: __init__.py  conftest.py  test_data_to_embedding.py  test_deployment_workflow.py  test_full_workflow.py  test_training_workflow.py
tests/serving/: __init__.py  conftest.py  test_config.py  test_model_loader.py
tests/training/: conftest.py  test_callbacks.py  test_lora_trainer.py
(+49 files in other folders)
